# Hackathon-parrotAI

./: .gitignore  README.md  START.md  main.py  pyproject.toml  todo.md
Chatbot/: .gitignore  EXAMPLE.env.local  README.md  SCENARIOS_TEST.md  log.txt  next.config.js  package-lock.json  package.json
Chatbot/app/: layout.tsx  page.tsx
Chatbot/components/: ChatInput.tsx  ChatMessage.tsx
Chatbot/doc/: About local controllers.md  COMMANDES_A_IMPLENTER.md  cahier des charges.md  doc-mission.md  docOfficial.md
NextJS/: README.md  package-lock.json  package.json
NextJS/app/: globals.css  layout.tsx  page.tsx
NextJS/components/: ChatInterface.tsx
NextJS/types/: chat.ts
Olympe-web-server/: .env.example  README.md  fastapi_controller.py  fastapi_entrypoint.py  main.py  mission_executor.py  mistral_models.json  natural_language_processor.py  pyproject.toml  requirements.txt  test_message_gateway.py
Olympe-web-server/api_clients/: __init__.py  mistral_socket.py  openai_socket.py
Olympe-web-server/tests/: __init__.py
apps/cli/: goto_poi.py  olympe_sim_smoke.py  olympe_simple_smoke.py  poi_inspection.py
archive/: README.md
client_debug/: README.md  chat_client.py  pyproject.toml  requirements.txt
core/world_map/: add_to_map.py  coordinate_converter.py  example_usage.py
discord-bot/: README.md
docs/: Olympe_Control_Methods.md  World_Description_Schema.md
fastAPI/: fastapi_controller.py  requirements.txt
maps/: industrial_city.json
serverPython/: .gitignore  ARCHITECTURE.md  ENV_EXAMPLE.md  QUICK_START.md  README.md  config.py  main.py
(+15 files in other folders)
